--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^6.0.1",
     "@nestjs/core": "^6.0.1",
+    "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.2",
     "rxjs": "^6.4.0"
