--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
+    "chalk": "^2.4.2",
     "jest": "^24.5.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
